build/meson: deprecate dhclient
Make it off by default. Point out it's deprecated in a config summary.

It's not maintained upstream. There's probably not much justification for
using it any more and we'd like to remove it at some point.

https://issues.redhat.com/browse/RHEL-24622

--- a/meson.build
+++ b/meson.build
@@ -657,6 +657,9 @@ foreach client : [ 'dhclient', 'dhcpcd', 'dhcpcanon' ]
   if (client_enable)
     dhcp_summary += (' ' + client_path)
   endif
+  if (client == 'dhclient')
+    dhcp_summary += ' (deprecated)'
+  endif
   dhcp_summary += '\n'
 endforeach
 
