build/autoconf: deprecate dhclient
Make it off by default. Point out it's deprecated in a config summary.

It's not maintained upstream. There's probably not much justification for
using it any more and we'd like to remove it at some point.

https://issues.redhat.com/browse/RHEL-24622

--- a/Makefile.am
+++ b/Makefile.am
@@ -157,6 +157,7 @@ DISTCHECK_CONFIGURE_FLAGS = \
 	--with-udev-dir=$$dc_install_base/lib/udev \
 	--with-wext=no \
 	--enable-ifcfg-rh \
+	--with-dhclient=yes \
 	--enable-ifupdown \
 	--disable-dependency-tracking \
 	--disable-autotools-deprecation \
