--- a/configure.ac
+++ b/configure.ac
@@ -915,18 +915,18 @@ fi
 
 # DHCP client support
 AC_ARG_WITH([dhclient],
-            AS_HELP_STRING([--with-dhclient=yes|no|path], [Enable dhclient support]))
-if test "$with_dhclient" != "no"; then
-	with_dhclient_="$with_dhclient"
+            AS_HELP_STRING([--with-dhclient=yes|no|path], [Enable dhclient support (deprecated)]),
+            with_dhclient="$withval",
+            with_dhclient="no")
+if test "$with_dhclient" = yes; then
 	AC_PATH_PROGS(with_dhclient, dhclient, no, /sbin:/usr/sbin:/usr/local/sbin)
 	if test "$with_dhclient" = "no"; then
-		if test "$with_dhclient_" = yes; then
-			AC_MSG_WARN([dhclient not found, assume path /usr/sbin/dhclient])
-			with_dhclient=/usr/sbin/dhclient
-		fi
+		AC_MSG_WARN([dhclient not found, assume path /usr/sbin/dhclient])
+		with_dhclient=/usr/sbin/dhclient
 	fi
 fi
 if test "$with_dhclient" != "no"; then
+	AC_MSG_WARN([dhclient is unmaintained and support for it is deprecated])
 	AC_DEFINE(WITH_DHCLIENT, 1, [Define if you have dhclient])
 	AC_DEFINE_UNQUOTED(DHCLIENT_PATH, "$with_dhclient", [Define path to dhclient])
 else
@@ -1477,7 +1477,7 @@ echo
 
 echo "DHCP clients (default $config_dhcp_default):"
 echo "  dhcpcanon: $with_dhcpcanon"
-echo "  dhclient: $with_dhclient"
+echo "  dhclient: $with_dhclient (deprecated)"
 echo "  dhcpcd: $with_dhcpcd"
 echo
 
