n-acd: runtime eBPF support detection
Previously, eBPF support was enabled/disabled via a compile-time
flag based on whether we expect the system to support it or not.

Make it so that n-acd always attempts to use eBPF, and
gracefully handles failure if it isn't supported (e.g.
due to missing capabilities).

--- a/src/meson.build
+++ b/src/meson.build
@@ -24,7 +24,7 @@ libn_acd = static_library(
     'n-acd/src/n-acd.c',
     'n-acd/src/n-acd-probe.c',
     'n-acd/src/util/timer.c',
-    enable_ebpf ? 'n-acd/src/n-acd-bpf.c' : 'n-acd/src/n-acd-bpf-fallback.c',
+    'n-acd/src/n-acd-bpf.c',
   ),
   include_directories: include_directories(
     'c-list/src',
