--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,11 +60,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-5fca51298172'
-  CENTOS_TAG:  'tag-40039d32d4e4'
-  DEBIAN_TAG:  'tag-410ffa3d1295'
-  FEDORA_TAG:  'tag-40039d32d4e4'
-  UBUNTU_TAG:  'tag-410ffa3d1295'
+  ALPINE_TAG:  'tag-94fd546ecdd9'
+  CENTOS_TAG:  'tag-ec274fe113f5'
+  DEBIAN_TAG:  'tag-cae73089725c'
+  FEDORA_TAG:  'tag-ec274fe113f5'
+  UBUNTU_TAG:  'tag-cae73089725c'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
@@ -638,7 +638,7 @@ check-tree:
     - date '+%Y%m%d-%H%M%S'; git ls-files -z -- 'po/*.po' | xargs -0 -n1 msgfmt -vc
     - date '+%Y%m%d-%H%M%S'; contrib/scripts/nm-code-format.sh -n
     - date '+%Y%m%d-%H%M%S'; ci-fairy generate-template && git diff --exit-code
-    - date '+%Y%m%d-%H%M%S'; ./autogen.sh --disable-autotools-deprecation && [ "$(LANG=C make -C po update-po 2>&1 1>/dev/null | grep -c 'warning:')" = 0 ]
+    - date '+%Y%m%d-%H%M%S'; meson setup build && [ "$(LANG=C ninja -C build NetworkManager-update-po 2>&1 1>/dev/null | grep -c 'warning:')" = 0 ]
 
 pages:
   stage: deploy
