--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -183,6 +183,7 @@ src/nmtui/nmt-page-macsec.c
 src/nmtui/nmt-page-ppp.c
 src/nmtui/nmt-page-team-port.c
 src/nmtui/nmt-page-team.c
+src/nmtui/nmt-page-veth.c
 src/nmtui/nmt-page-vlan.c
 src/nmtui/nmt-page-wifi.c
 src/nmtui/nmt-page-wireguard.c
