--- a/src/meson.build
+++ b/src/meson.build
@@ -120,6 +120,7 @@ if enable_tests
   subdir('libnm-client-test')
   subdir('libnm-glib-aux/tests')
   subdir('libnm-platform/tests')
+  subdir('libnm-core-aux-intern/tests')
   subdir('libnm-core-impl/tests')
   subdir('libnm-client-impl/tests')
   subdir('libnm-client-aux-extern/tests')
